--- a/compose.yaml
+++ b/compose.yaml
@@ -6,6 +6,8 @@ services:
       - node_modules:/home/app/node_modules
     working_dir: /home/app
     tty: true
+    ports:
+      - "4000:4000"
 
 volumes:
   node_modules:
