--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "handson-glaphqljs",
   "description": "Hands on GraphQL.js",
   "dependencies": {
-    "graphql": "^16.8.1"
+    "express": "^4.18.3",
+    "graphql": "^16.8.1",
+    "graphql-http": "^1.22.0",
+    "ruru": "^2.0.0-beta.11"
   }
 }
